# MandlebrotSetSFML

./: .gitignore  CMakeList.txt  CMakeLists.txt  CONTRIBUTING.md  FOFMULA_SYNTAX.md  FORMULA_WRITING_GUIDE.md  MUST_TRY_FORMULAS.md  Mandelbrot.cpp  Mandelbrot.cu  MandlebrotProject.sln  MandlebrotProject.vcxproj  MandlebrotProject.vcxproj.filters  README.md  main.cpp  todoList.txt
CUDA files/: CUDA_ComputationFunctions.cu  CUDA_ComputationFunctions.cuh  FractalClass.cu  FractalClass.cuh  benchmark.cu
CUDA files/fractals/: julia.cu  julia.cuh  mandelbrot.cu  mandelbrot.cuh
include/: CUDA_ComputationFunctions.cuh  FractalClass.cuh  HardCodedVars.h  benchmark.cuh  kernelCodeStr.h
include/ClassImplementation/: CpuFallback.h  CustomFormulaHandling.h  FractalClass.cuh  FractalInteraction.h  IterationPath.h  JuliaTimelapse.h  Macros.h  PaletteHandler.h  Processing.cu
include/ClassImplementation/Fractals/: JuliaRendering.cuh  MandelbrotRendering.cuh
include/fractals/: custom.cuh  julia.cuh  mandelbrot.cuh
src/: CUDA_ComputationFunctions.cu  FractalClass.cu  benchmark.cu  kernelCodeStr.cpp  main.cpp
src/fractals/: julia.cu  mandelbrot.cu
